// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comparator field should render default Comparator 1`] = `
<div
  className="theme-comparator"
>
  <withI18nextTranslation(ActionDropdown)
    hideLabel={false}
    items={
      [
        {
          "icon": "talend-greater-than",
          "id": "comparison-operator-0",
          "label": <OperatorListElement
            icon="talend-greater-than"
            name=""
            selected={false}
            symbol="greater_than"
          />,
          "title": "greater_than",
          "value": "greater_than",
        },
        {
          "icon": "talend-less-than",
          "id": "comparison-operator-1",
          "label": <OperatorListElement
            icon="talend-less-than"
            name=""
            selected={false}
            symbol="less_than"
          />,
          "title": "less_than",
          "value": "less_than",
        },
        {
          "icon": "talend-equal",
          "id": "comparison-operator-2",
          "label": <OperatorListElement
            icon="talend-equal"
            name=""
            selected={false}
            symbol="equals"
          />,
          "title": "equals",
          "value": "equals",
        },
      ]
    }
    noCaret={true}
    onSelect={[Function]}
    t={[Function]}
  />
  <Widget
    errors={{}}
    id="default"
    isValid={true}
    onChange={[Function]}
    onFinish={[Function]}
    schema={
      {
        "key": [
          "default",
          "value",
        ],
        "required": true,
        "schema": {
          "type": "string",
        },
        "title": "Default comparator",
        "type": "text",
      }
    }
    value={{}}
    widgets={{}}
  />
</div>
`;

exports[`Comparator field should render disabled Comparator 1`] = `
<div
  className="theme-comparator"
>
  <withI18nextTranslation(ActionDropdown)
    disabled={true}
    hideLabel={false}
    items={
      [
        {
          "icon": "talend-greater-than",
          "id": "comparison-operator-0",
          "label": <OperatorListElement
            icon="talend-greater-than"
            name=""
            selected={false}
            symbol="greater_than"
          />,
          "title": "greater_than",
          "value": "greater_than",
        },
        {
          "icon": "talend-less-than",
          "id": "comparison-operator-1",
          "label": <OperatorListElement
            icon="talend-less-than"
            name=""
            selected={false}
            symbol="less_than"
          />,
          "title": "less_than",
          "value": "less_than",
        },
        {
          "icon": "talend-equal",
          "id": "comparison-operator-2",
          "label": <OperatorListElement
            icon="talend-equal"
            name=""
            selected={false}
            symbol="equals"
          />,
          "title": "equals",
          "value": "equals",
        },
      ]
    }
    noCaret={true}
    onSelect={[Function]}
    t={[Function]}
  />
  <Widget
    errors={{}}
    id="default"
    isValid={true}
    onChange={[Function]}
    onFinish={[Function]}
    schema={
      {
        "disabled": true,
        "key": [
          "default",
          "value",
        ],
        "required": true,
        "schema": {
          "type": "string",
        },
        "title": "Default comparator",
        "type": "text",
      }
    }
    value={{}}
    widgets={{}}
  />
</div>
`;
